Swiched from memdb to sqlite
