# utils/validation.go
@@ -10,8 +10,8 @@ import (
 func CanAddDinosaurToCage(cage *cagemodels.Cage, dinosaur *dinomodels.Dinosaur) (bool, error) {
 	// 1. Carnivores can only be in a cage with other dinosaurs of the same species.
 	if dinosaur.Diet == "carnivore" {
-		if cage.CurrentDinosaurs != nil {
-			for _, dino := range *cage.CurrentDinosaurs {
+		if len(cage.CurrentDinosaurs) > 0 {
+			for _, dino := range cage.CurrentDinosaurs {
 				if dino.Species != dinosaur.Species {
 					return false, errors.New("Carnivores can only be in a cage with dinosaurs of the same species")
 				}
@@ -21,8 +21,8 @@ func CanAddDinosaurToCage(cage *cagemodels.Cage, dinosaur *dinomodels.Dinosaur) 
 
 	// 2. Herbivores cannot be in the same cage as carnivores.
 	if dinosaur.Diet == "herbivore" {
-		if cage.CurrentDinosaurs != nil {
-			for _, dino := range *cage.CurrentDinosaurs {
+		if len(cage.CurrentDinosaurs) > 0 {
+			for _, dino := range cage.CurrentDinosaurs {
 				if dino.Diet == "carnivore" {
 					return false, errors.New("Herbivores cannot be in the same cage as carnivores")
 				}
@@ -31,7 +31,7 @@ func CanAddDinosaurToCage(cage *cagemodels.Cage, dinosaur *dinomodels.Dinosaur) 
 	}
 
 	// 3. Cages have a maximum capacity for how many dinosaurs they can hold.
-	if cage.CurrentDinosaurs != nil && len(*cage.CurrentDinosaurs) >= cage.MaxCapacity {
+	if len(cage.CurrentDinosaurs) >= cage.MaxCapacity {
 		return false, errors.New("Cage is at maximum capacity for dinosaurs")
 	}
 
